--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,22 @@ rust-version = "1.83"
 libp2p-dog = { version = "0.1.0", path = "dog" }
 
 # External dependencies
+async-channel = "2.3.1"
 asynchronous-codec = "0.7.0"
 bytes = "1.6"
-cuckoofilter = "0.5.0"
+either = "1.13.0"
 futures = "0.3.30"
+futures-timer = "3.0.3"
+hex_fmt = "0.3.0"
 libp2p = "0.54.1"
 quick-protobuf = "0.8.1"
 quick-protobuf-codec = "0.3.1"
 rand = "0.8"
+serde = "1"
 thiserror = "2"
 tokio = "1.42.0"
 tracing = "0.1.37"
+void = "1.0.2"
 
 [workspace.lints]
 rust.unreachable_pub = "warn"
