--- a/dog/Cargo.toml
+++ b/dog/Cargo.toml
@@ -8,16 +8,21 @@ license = "Apache-2.0"
 repository = "https://github.com/informalsystems/libp2p-dog"
 
 [dependencies]
+async-channel = { workspace = true }
 asynchronous-codec = { workspace = true } 
 bytes = { workspace = true }
-cuckoofilter = { workspace = true } 
+either = { workspace = true }
 futures = { workspace = true }
-libp2p = { workspace = true } 
+futures-timer = { workspace = true }
+hex_fmt = { workspace = true }
+libp2p = { workspace = true }
 quick-protobuf = { workspace = true } 
 quick-protobuf-codec = { workspace = true } 
 rand = { workspace = true }
+serde = { workspace = true, optional = true, features = ["derive"] }
 thiserror = { workspace = true }
 tracing = { workspace = true } 
+void = { workspace = true }
 
 [lints]
 workspace = true
