--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3.30"
 futures-timer = "3.0.3"
 hex_fmt = "0.3.0"
 libp2p = "0.54.1"
+lru = "0.12.5"
 quick-protobuf = "0.8.1"
 quick-protobuf-codec = "0.3.1"
 rand = "0.8"
