--- a/dog/Cargo.toml
+++ b/dog/Cargo.toml
@@ -16,6 +16,7 @@ futures = { workspace = true }
 futures-timer = { workspace = true }
 hex_fmt = { workspace = true }
 libp2p = { workspace = true }
+lru = { workspace = true }
 quick-protobuf = { workspace = true } 
 quick-protobuf-codec = { workspace = true } 
 rand = { workspace = true }
