--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0"
 release = false
 
 [dependencies]
-libp2p = { workspace = true, features = ["noise", "tcp", "yamux", "tokio", "identify", "macros"] }
+libp2p = { workspace = true, features = ["noise", "tcp", "yamux", "tokio", "macros"] }
 libp2p-dog = { path = "../../dog" }
 tokio = { workspace = true, features = ["full"] }
 clap = { version = "4.5.16", features = ["derive"] }
