--- a/dog/Cargo.toml
+++ b/dog/Cargo.toml
@@ -17,6 +17,7 @@ futures-timer = { workspace = true }
 hex_fmt = { workspace = true }
 libp2p = { workspace = true }
 lru = { workspace = true }
+prometheus-client = { workspace = true }
 quick-protobuf = { workspace = true } 
 quick-protobuf-codec = { workspace = true } 
 rand = { workspace = true }
