--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,20 +19,24 @@ libp2p-dog = { version = "0.1.0", path = "dog" }
 async-channel = "2.3.1"
 asynchronous-codec = "0.7.0"
 bytes = "1.6"
+clap = "4.5.16"
 either = "1.13.0"
 futures = "0.3.30"
 futures-timer = "3.0.3"
 hex_fmt = "0.3.0"
 libp2p = "0.54.1"
 lru = "0.12.5"
-prometheus-client = "0.23.0"
+prometheus-client = "0.22.3"
 quick-protobuf = "0.8.1"
 quick-protobuf-codec = "0.3.1"
 rand = "0.8"
 serde = "1"
+serde_json = "1.0.135"
 thiserror = "2"
 tokio = "1.42.0"
+toml = "0.8.19"
 tracing = "0.1.37"
+tracing-subscriber = "0.3.18"
 void = "1.0.2"
 
 [workspace.lints]
