--- a/benchmark/code/Cargo.toml
+++ b/benchmark/code/Cargo.toml
@@ -10,12 +10,16 @@ license = "Apache-2.0"
 release = false
 
 [dependencies]
-libp2p = { workspace = true, features = ["noise", "tcp", "yamux", "tokio", "macros"] }
+clap = { workspace = true, features = ["derive"] }
+libp2p = { workspace = true, features = ["noise", "tcp", "yamux", "tokio", "macros", "gossipsub"] }
 libp2p-dog = { path = "../../dog" }
+prometheus-client = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
-clap = { version = "4.5.16", features = ["derive"] }
+toml = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 [lints]
 workspace = true
