--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -1,6 +1,11 @@
-FROM rust AS builder
-WORKDIR /mnt
-RUN --mount=type=bind,source=./code,target=/mnt cargo build --release --target-dir /tmp
+FROM rust:latest AS builder
+WORKDIR /app
+COPY . .
+WORKDIR /app/benchmark
+RUN cargo build --release --target-dir /tmp --bin libp2p-dog-benchmark
 
 FROM debian:bookworm-slim
-COPY --from=builder /tmp/release/benchmark /usr/local/bin/benchmark
+RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+COPY --from=builder /tmp/release/libp2p-dog-benchmark /usr/local/bin/benchmark
