--- a/dog/tests/Cargo.toml
+++ b/dog/tests/Cargo.toml
@@ -10,7 +10,13 @@ license = "Apache-2.0"
 release = false
 
 [dependencies]
-libp2p = { workspace = true, features = ["tcp", "noise", "yamux", "tokio", "macros"] }
+libp2p = { workspace = true, features = [
+  "tcp",
+  "noise",
+  "yamux",
+  "tokio",
+  "macros",
+] }
 libp2p-dog.workspace = true
 rand = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
