--- a/benchmark/sample-benchmark-config.conf
+++ b/benchmark/sample-benchmark-config.conf
@@ -7,3 +7,6 @@ TPS=5
 TX_SIZE=1024 # in bytes
 DUMP_INTERVAL=1000 # in milliseconds
 REGISTRY_PREFIX=""
+REDUNDANCY=1.0
+DELTA=10 # in percentage
+REDUNDANCY_INTERVAL=1000 # in milliseconds
