--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@ benchmark/machines.txt
 benchmark/benchmark.conf
 benchmark/inventory.ini
 benchmark/*.json
-benchmark/output
+benchmark/output/output-*
+benchmark/output/*.html
 benchmark/config/*
 !benchmark/config/README.md
 target
