feat: upgraded libp2p to v0.55.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ either = "1.13.0"
 futures = "0.3.30"
 futures-timer = "3.0.3"
 hex_fmt = "0.3.0"
-libp2p = "0.54.1"
+libp2p = "0.55.0"
+libp2p-core = "0.43.0"
 lru = "0.12.5"
 prometheus-client = "0.22.3"
 quick-protobuf = "0.8.1"
