fix: benchmark code + pool.ntp.org servers

--- a/benchmark/config/ntp.conf
+++ b/benchmark/config/ntp.conf
@@ -7,14 +7,19 @@ restrict -6 default ignore
 restrict    127.0.0.1
 restrict -6 ::1
 
-server ntp1.hetzner.de iburst
+server 0.pool.ntp.org iburst
 restrict    213.239.239.164 nomodify notrap nopeer noquery
 restrict -6 2a01:4f8:0:a0a1::2:1 nomodify notrap nopeer noquery
 
-server ntp2.hetzner.de iburst
-restrict    213.239.239.165 nomodify notrap nopeer noquery
-restrict -6 2a01:4f8:0:a101::2:3 nomodify notrap nopeer noquery
+server 1.pool.ntp.org iburst
+restrict    213.239.239.164 nomodify notrap nopeer noquery
+restrict -6 2a01:4f8:0:a0a1::2:1 nomodify notrap nopeer noquery
 
-server ntp3.hetzner.de iburst
-restrict    213.239.239.166 nomodify notrap nopeer noquery
-restrict -6 2a01:4f8:0:a112::2:2 nomodify notrap nopeer noquery
+server 2.pool.ntp.org iburst
+restrict    213.239.239.164 nomodify notrap nopeer noquery
+restrict -6 2a01:4f8:0:a0a1::2:1 nomodify notrap nopeer noquery
+
+server 3.pool.ntp.org iburst
+restrict    213.239.239.164 nomodify notrap nopeer noquery
+restrict -6 2a01:4f8:0:a0a1::2:1 nomodify notrap nopeer noquery
+
