--- a/benchmark/sample-benchmark-config.conf
+++ b/benchmark/sample-benchmark-config.conf
@@ -10,3 +10,4 @@ REGISTRY_PREFIX=""
 REDUNDANCY=1.0
 DELTA=10 # in percentage
 REDUNDANCY_INTERVAL=1000 # in milliseconds
+STOP_DELAY=5 # in seconds
