--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ benchmark/machines.txt
 benchmark/benchmark.conf
 benchmark/inventory.ini
 benchmark/*.json
-benchmark/output/output-*
-benchmark/output/*.html
+benchmark/output/*/
 benchmark/config/*
 !benchmark/config/README.md
 !benchmark/config/ntp.conf
