--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,12 +21,12 @@ asynchronous-codec = "0.7.0"
 bytes = "1.6"
 clap = "4.5.16"
 either = "1.13.0"
+fnv = "1.0.7"
 futures = "0.3.30"
 futures-timer = "3.0.3"
 hex_fmt = "0.3.0"
 libp2p = "0.55.0"
 libp2p-core = "0.43.0"
-lru = "0.12.5"
 prometheus-client = "0.22.3"
 quick-protobuf = "0.8.1"
 quick-protobuf-codec = "0.3.1"
@@ -39,6 +39,7 @@ toml = "0.8.19"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.18"
 void = "1.0.2"
+web-time = "1.1.0"
 
 [workspace.lints]
 rust.unreachable_pub = "warn"
