--- a/dog/Cargo.toml
+++ b/dog/Cargo.toml
@@ -12,12 +12,12 @@ async-channel = { workspace = true }
 asynchronous-codec = { workspace = true }
 bytes = { workspace = true }
 either = { workspace = true }
+fnv = { workspace = true }
 futures = { workspace = true }
 futures-timer = { workspace = true }
 hex_fmt = { workspace = true }
 libp2p = { workspace = true }
 libp2p-core = { workspace = true }
-lru = { workspace = true }
 prometheus-client = { workspace = true }
 quick-protobuf = { workspace = true }
 quick-protobuf-codec = { workspace = true }
@@ -26,6 +26,7 @@ serde = { workspace = true, optional = true, features = ["derive"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 void = { workspace = true }
+web-time = { workspace = true }
 
 [lints]
 workspace = true
